style.css
/* 
html5doctor.com Reset Stylesheet
v1.6.1
Last Updated: 2010-09-17
Author: Richard Clark - http://richclarkdesign.com 
Twitter: @rich_clark
*/

html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

body {
    line-height:1;
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section { 
    display:block;
}

nav ul {
    list-style:none;
}

blockquote, q {
    quotes:none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content:'';
    content:none;
}

a {
    margin:0;
    padding:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

/* change colours to suit your needs */
ins {
    background-color:#ff9;
    color:#000;
    text-decoration:none;
}

/* change colours to suit your needs */
mark {
    background-color:#ff9;
    color:#000; 
    font-style:italic;
    font-weight:bold;
}

del {
    text-decoration: line-through;
}

abbr[title], dfn[title] {
    border-bottom:1px dotted;
    cursor:help;
}

table {
    border-collapse:collapse;
    border-spacing:0;
}

/* change border colour to suit your needs */
hr {
    display:block;
    height:1px;
    border:0;   
    border-top:1px solid #cccccc;
    margin:1em 0;
    padding:0;
}

input, select {
    vertical-align:middle;
}

/*My styling*/

#main-about .mobile-signup a{
	position: fixed;
	width: 100px;
	height: 40px;
	text-align: center;
	z-index: 2000;
	bottom: 20px;
	left: 0;
	right: 0;
	margin-right: auto;
	margin-left: auto;
	border-radius: 25px;
	line-height: 37px;
	display: none;
	font-family: 'Noto Serif JP', sans-serif;
	font-weight: bold;
	color: black;
	background-image: linear-gradient(to right, #00cc44 , #99ffbb);
}

.main-wrapper {
	margin: 0 auto;
	width: auto;
}

.main-wrapper ul li{
	float: left;
	margin-right; 5px;
}

a {
	text-decoration: none;
}

body {
	background-color: #184193
}

header nav {
	width: 100%;
	height: 60px;
	background-image: linear-gradient(to right, green , white);
	position: fixed;
	box-shadow: 5px 5px 8px black;
	z-index: 1000;
	position: absolute;
}

header nav ul {
	float: left;
}

header nav ul li {
	float: left;
	list-style: none;
}

header nav ul li a {
	font-family: arial;
	font-size: 16px;
	color: #111;
	line-height: 63px;
}

header .nav-login {
	float: right;
}

header .nav-login form {
	float: left;
	padding-top: 15px;
}

header .nav-login form input {
	float: left;
	width: 140px;
	height: 30px;
	padding: 0px 10px;
	margin-right: 10px;
	border: none;
	font-family: arial;
	font-size: 14px;
	color: #111;
	line-height: 30px;
}

header .nav-login form button {
	float: left;
	width: 60px;
	height: 30px;
	margin-right: 10px;
	border: none;
	background-color: #f3f3f3;
	font-family: arial;
	font-size: 14px;
	color: #111;
	cursor: pointer;
}

header .nav-login form button:hover {
	background-color: #ccc;
}

header .nav-login a {
	display: block;
	width: 60px;
	height: 60px;
	border: none;
	float: left;
	background-color: #DDBD0F;
	font-family: arial;
	font-size: 16px;
	color: #111;
	line-height: 63px;
	cursor: pointer;
}

.main-container {
	padding-top:70px;
	background-image: url("images/bear-green.gif");
	height: 300px;
}

.main-container-text {
	padding: 50px 0;
	padding: 50px;
}

.main-container h2 {
	font-size: 40px;
	color: white;
	line-height: 50px;
	text-align: center;
	font-family: 'Noto Serif JP', sans-serif;
	margin-left: auto;
	margin-right: auto;
}

.main-container img {
	width: 100px;
	height: 100px;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.main-container h3 {
	font-size: 30px;
	color: white;
	line-height: 50px;
	text-align: center;
	font-family: 'Montserrat', sans-serif;
	margin-left: auto;
	margin-right: auto;
}

#headergreeting {
	display: block;
	float: left;
	padding-right: 10px;
	line-height: 63px;
	font-size: 20px;
	font-family: arial;
}

/*signup.php*/

.signup-form {
	width: 400px;
	margin: 0 auto;
	padding-top: 30px;
}

.signup-form input {
	width: 90%;
	height: 40px;
	padding: 0px 5%;
	margin-bottom: 4px;
	border: none;
	background-color: #fff;
	font-family: arial;
	font-size: 16px;
	color: #111;
	line-height: 40px;
}

.signup-form button {
	display: block;
	margin: 0 auto;
	width: 30%;
	height: 40px;
	border: none;
	background-color: #222;
	font-family: arial;
	font-size: 16px;
	color: #fff;
	cursor: pointer;
}

.signup-form button:hover {
	background-color: #111;
}

/*intro paragraph */

#intro {
	padding-top: 90px;
	border: 0px;
	margin: 0px;
}

#main-about img {
	height: 300px;
	width: 300px;
}

#main-about h2{
	font-family: 'Noto Serif JP', sans-serif;
	text-align: center;
	font-size: 30px;
	padding: 20px;
}

#main-about h3 {
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	max-width: 500px;
	border-top: 10px;
	padding: 10px;
	margin-right: auto;
	margin-left: auto;
	line-height: 30px;
}

#purposeid {
	margin-top: 100px;
}

#purposeid h2, #purposeid h3{
	max-width: 500px;
	margin-right: auto;
	margin-left: auto;
	text-align: left;
}

.purpose {
	display: flex;
	flex-flow: row wrap;
	flex-direction: row;
	justify-content: space-between;
	align-items: space-evenly;
}

.purpose h2, h3 {
	text-align: left;
}

.purpose-child {
	flex: 1;
	text-align: center;
}

.purpose-child-two {
	flex: 1;
	min-width: 500px;
}

/*mobile media query*/

@media (max-width:800px)  { 
	#main-about .mobile-signup a {
		display: block;
	}

	.menu-icon {
		  position: absolute;
		  float: left;
		  width: 20px;
		  height: 14px;
		  margin: auto;
		  top: 0;
		  right: 15px;
		  bottom: 1px;
	}

	.main-wrapper .menu-line{
		
		 background-color: #333;
		 height: 2px;
		 width: 100%;
		 border-radius: 2px;
		 position: absolute; 
		 left: 0;
	}
		
	.main-wrapper .menu-line-1 { 
		top: 0; 
	}

	.main-wrapper .menu-line-2 {
		 top: 0;
		 bottom: 0;
		 margin: auto;
	}

	.main-wrapper .menu-line-3 { 
		bottom: 0; 
	}

	.navlink {
		position: fixed;
		margin-top: 60px;
		width: 100%;
		background-color: white;
		right: -786px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	.navlink-out {
		position: fixed;
		margin-top: 60px;
		width: 100%;
		background-color: white;
		right: 0px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	.navlink ul {
		width: 100%;
		text-align: center;
	}
	
	.navlink li {
		width: 100%;
		border: .5px solid black;
	}
	
	header .nav-login {
		position: fixed;
		margin-top: 250px;
		width: 100%;
		background-color: white;
		border-top: 1px solid black;
		height: 60px;
		float: none;
		right: -786px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	header .nav-login-out {
		right: 0px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	header .nav-login form {
		width: 100%;
		float: none;
		text-align: center;
	}
	
	header .nav-login form input {
		float: none;
	}
	
	header .nav-login form button {
		float: none;
	}
	
	header .nav-login a {
		display: none;
	}
}

@media (max-width:667px)  { 

	.main-container {
		height: 550px;
	}

	.desc h2{
		font-size: 60px;
	}
	
	.desc h3 {
		font-size: 40px;
	}
	
	#main-about h2 {
		font-size: 50px;
		font-color: red;
	}
	
	#main-about h3 {
		font-size: 30px;
	}
	
	.purpose-child-two {
		min-width: none;
	}
}

